# epistole

./: .dev.vars.example  .gitignore  .mcpbignore  CHANGELOG.md  README.md  index.js  install.sh  manifest.json  mcp_server.py  package-lock.json  package.json  pyproject.toml  schema.sql  setup.sh  tsconfig.json  wrangler.toml
epistole/: __init__.py  config.py  imap_client.py  index.py  server.py  smtp_client.py  sync.py
migrations/: 0001_whatsapp.sql
src/: auth-handler.ts  auth.ts  index.ts  mcp.ts  types.ts
src/imap/: client.ts  parser.ts
src/smtp/: client.ts
src/sync/: incremental.ts
src/tools/: live.ts  search.ts  whatsapp.ts
src/wa/: embed.ts  handler.ts  ingest.ts
tests/: test_index.py  test_smoke.py  test_sync.py
